Add new papers.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,39 @@
 ---
 ---
 
+@article{karim2025beyond,
+  bibtex_show = {true},
+  title       = {Beyond the Score: Uncertainty-Calibrated LLMs for Automated Essay Assessment},
+  author      = {Karim, Ahmed and Wang, Qiao and Yuan, Zheng},
+  journal     = {arXiv preprint arXiv:2509.15926},
+  volume      = {},
+  number      = {},
+  pages       = {},
+  year        = {2025},
+  month       = {sep},
+  abstract    = {Automated Essay Scoring (AES) systems now reach near human agreement on some public benchmarks, yet real-world adoption, especially in high-stakes examinations, remains limited. A principal obstacle is that most models output a single score without any accompanying measure of confidence or explanation. We address this gap with conformal prediction, a distribution-free wrapper that equips any classifier with set-valued outputs and formal coverage guarantees. Two open-source large language models (Llama-3 8B and Qwen-2.5 3B) are fine-tuned on three diverse corpora (ASAP, TOEFL11, Cambridge-FCE) and calibrated at a 90 percent risk level. Reliability is assessed with UAcc, an uncertainty-aware accuracy that rewards models for being both correct and concise. To our knowledge, this is the first work to combine conformal prediction and UAcc for essay scoring. The calibrated models consistently meet the coverage target while keeping prediction sets compact, indicating that open-source, mid-sized LLMs can already support teacher-in-the-loop AES; we discuss scaling and broader user studies as future work.},
+  doi         = {10.48550/arXiv.2509.15926},
+  html        = {https://arxiv.org/abs/2509.15926},
+  pdf         = {https://arxiv.org/pdf/2509.15926.pdf}
+}
+
+@article{wang2025genquest,
+  bibtex_show = {true},
+  title       = {GenQuest: An LLM-based Text Adventure Game for Language Learners},
+  author      = {Wang, Qiao and Labib, Adnan and Swier, Robert and Hofmeyr, Michael and Yuan, Zheng},
+  journal     = {arXiv preprint arXiv:2510.04498},
+  volume      = {},
+  number      = {},
+  pages       = {},
+  year        = {2025},
+  month       = {oct},
+  abstract    = {GenQuest is a generative text adventure game that leverages Large Language Models (LLMs) to facilitate second language learning through immersive, interactive storytelling. The system engages English as a Foreign Language (EFL) learners in a collaborative “choose-your-own-adventure” style narrative, dynamically generated in response to learner choices. Game mechanics such as branching decision points and story milestones are incorporated to maintain narrative coherence while allowing learner-driven plot development. Key pedagogical features include content generation tailored to each learner's proficiency level, and a vocabulary assistant that provides in-context explanations of learner-queried text strings, ranging from words and phrases to sentences. Findings from a pilot study with university EFL students in China indicate promising vocabulary gains and positive user perceptions. Also discussed are suggestions from participants regarding the narrative length and quality, and the request for multi-modal content such as illustrations.},
+  doi         = {10.48550/arXiv.2510.04498},
+  html        = {https://arxiv.org/abs/2510.04498},
+  pdf         = {https://arxiv.org/pdf/2510.04498.pdf}
+}
+
+
 @article{wang2024evaluation,
   bibtex_show = {true},
   title       = {Evaluation of automated vocabulary quiz generation with VocQGen},
