--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,17 +14,17 @@
   pdf         = {https://arxiv.org/pdf/2509.15926.pdf}
 }
 
-@article{wang2025genquest,
+@inproceedings{wang2025genquest,
   bibtex_show = {true},
   title       = {GenQuest: An LLM-based Text Adventure Game for Language Learners},
   author      = {Wang, Qiao and Labib, Adnan and Swier, Robert and Hofmeyr, Michael and Yuan, Zheng},
-  journal     = {Workshop on Wordplay: When Language Meets Games, EMNLP (preprint)},
+  booktitle   = {Proceedings of the 5th Wordplay: When Language Meets Games Workshop, EMNLP 2025},
   year        = {2025},
-  month       = {oct},
+  month       = {nov},
   abstract    = {GenQuest is a generative text adventure game that leverages Large Language Models (LLMs) to facilitate second language learning through immersive, interactive storytelling. The system engages English as a Foreign Language (EFL) learners in a collaborative “choose-your-own-adventure” style narrative, dynamically generated in response to learner choices. Game mechanics such as branching decision points and story milestones are incorporated to maintain narrative coherence while allowing learner-driven plot development. Key pedagogical features include content generation tailored to each learner's proficiency level, and a vocabulary assistant that provides in-context explanations of learner-queried text strings, ranging from words and phrases to sentences. Findings from a pilot study with university EFL students in China indicate promising vocabulary gains and positive user perceptions. Also discussed are suggestions from participants regarding the narrative length and quality, and the request for multi-modal content such as illustrations.},
   doi         = {10.48550/arXiv.2510.04498},
-  html        = {https://arxiv.org/abs/2510.04498},
-  pdf         = {https://arxiv.org/pdf/2510.04498.pdf}
+  html        = {https://wordplay-workshop.github.io/modern/},
+  pdf         = {https://wordplay-workshop.github.io/pdfs/22.pdf}
 }
 
 
