--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,13 +5,15 @@
   bibtex_show = {true},
   title       = {Beyond the Score: Uncertainty-Calibrated LLMs for Automated Essay Assessment},
   author      = {Karim, Ahmed and Wang, Qiao and Yuan, Zheng},
-  booktitle   = {Proceedings of EMNLP (preprint)},
+  booktitle   = {Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
   year        = {2025},
-  month       = {sep},
+  month       = {nov},
+  publisher   = {Association for Computational Linguistics},
+  pages       = {19642--19647},
   abstract    = {Automated Essay Scoring (AES) systems now reach near human agreement on some public benchmarks, yet real-world adoption, especially in high-stakes examinations, remains limited. A principal obstacle is that most models output a single score without any accompanying measure of confidence or explanation. We address this gap with conformal prediction, a distribution-free wrapper that equips any classifier with set-valued outputs and formal coverage guarantees. Two open-source large language models (Llama-3 8B and Qwen-2.5 3B) are fine-tuned on three diverse corpora (ASAP, TOEFL11, Cambridge-FCE) and calibrated at a 90 percent risk level. Reliability is assessed with UAcc, an uncertainty-aware accuracy that rewards models for being both correct and concise. To our knowledge, this is the first work to combine conformal prediction and UAcc for essay scoring. The calibrated models consistently meet the coverage target while keeping prediction sets compact, indicating that open-source, mid-sized LLMs can already support teacher-in-the-loop AES; we discuss scaling and broader user studies as future work.},
-  doi         = {10.48550/arXiv.2509.15926},
-  html        = {https://arxiv.org/abs/2509.15926},
-  pdf         = {https://arxiv.org/pdf/2509.15926.pdf}
+  doi         = {10.18653/v1/2025.emnlp-main.992},
+  html        = {https://aclanthology.org/2025.emnlp-main.992/},
+  pdf         = {https://aclanthology.org/2025.emnlp-main.992.pdf}
 }
 
 @inproceedings{wang2025genquest,
